^ attempting to clean up transition between mobile fixed floating div and no fixed  floating div. removing floats from column classes on mobile/480px and below

--- a/Content/site.css
+++ b/Content/site.css
@@ -75,8 +75,17 @@ a:focus {
     body {
         padding-top: 80px;
     }
+    .floating {
+        margin: 0;
+    }
 }
 @media (max-width: 480px) {
+    .savings {
+        float: left !important;
+    }
+    [class^="col-"] {
+        float: none;
+    }
     .bernie-calc .navbar-inverse {
         height: 65px;
     }
